<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.csvreader</groupId>
    <artifactId>javacsv</artifactId>
    <version>2.2</version>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <packaging>jar</packaging>
    <name>Java CSV Reader and Writer</name>
    <url>https://github.com/bruce-dunwiddie/javacsv</url>
    <description>Java CSV is a small fast open source java library for reading and writing CSV and plain delimited text files. All kinds of CSV files can be handled, text qualified, Excel formatted, etc.</description>
    <licenses>
        <license>
            <name>GNU Library or Lesser General Public License</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:https://github.com/bruce-dunwiddie/javacsv.git</connection>
        <url>https://github.com/bruce-dunwiddie/javacsv</url>
    </scm>
</project>